Precision of getClientRects(), getBoundingClientRect() differs depending whether simple line layout or line box layout is used https://bugs.webkit.org/show_bug.cgi?id=205563 <rdar://problem/58165528>

Reviewed by Zalan Bujtas.

Source/WebCore:

Fix up simple line layout run rect to match the rect returned by the line layout code path.

* rendering/InlineTextBox.cpp:
(WebCore::snappedSelectionRect): Added; extracted from localSelectionRect().
(WebCore::InlineTextBox::localSelectionRect const): Moved some logic into snappedSelectionRect()
and modified code to use it.
* rendering/InlineTextBox.h:
* rendering/SimpleLineLayoutFunctions.cpp:
(WebCore::SimpleLineLayout::collectAbsoluteQuadsForRange): Fix up run rect.

Tools:

Update test results.

* TestWebKitAPI/Tests/WebKitCocoa/DocumentEditingContext.mm:
(TEST):
* TestWebKitAPI/Tests/ios/AccessibilityTestsIOS.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/ios/AutocorrectionTestsIOS.mm:
(TEST):

LayoutTests:

Update expected result now that simple line layout computes a client rect that matches
the rect the line layout code computes.

* fast/dom/Range/getClientRects-expected.txt:
* fast/dom/Range/getClientRects.html:
* fast/dom/Range/mac/getClientRects-and-getBoundingClientRect-before-and-after-selection-expected.txt:
* fast/repaint/text-selection-overflow-hidden-expected.txt:

Canonical link: https://commits.webkit.org/218960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254091 268f45cc-cd09-0410-ab3c-d52691b4dbfc